@@ -38,7 +38,7 @@ using namespace HEPREP;
 
 G4HepRep::G4HepRep ()
         : G4VGraphicsSystem ("G4HepRep",
-			     "HepRepXML",
+                             "HepRepXML",
         "HepRep Generic Driver for XML, RMI and CORBA",
         G4VGraphicsSystem::threeD) {
 }
