@@ -1,4 +1,4 @@
-$Id: History,v 1.20 2002-11-27 12:42:06 johna Exp $
+$Id: History,v 1.21 2002-11-27 19:13:28 duns Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,9 @@ committal in the CVS repository !
 
 History file for visualization/HepRep sub-category
 ---------------------------------------------------------------------------
+
+27th November 2002 Mark Donszelmann
+- Fixed core dump (Solaris) if open HepRepXML and closed it w/o writing anything
 
 27th November 2002  John Allison  (vis-V04-01-08)
 - Changed mickname of HepRep to HepRepXML.
